auth api updated
