# routes/auth/handlers.go
@@ -6,19 +6,28 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+type RegisterResponse struct {
+	Message string `json:"message"`
+}
+
+type LoginResponse struct {
+	Message string `json:"message"`
+	Token   string `json:"token"`
+}
+
 // @Summary Register a new customer
 // @Description Register a new customer and generate a JWT token
 // @Tags Authentication
 // @Accept json
 // @Produce json
-// @Success 200 {object} gin.H
+// @Success 200 {object} RegisterResponse
 // @Router /auth/register [post]
 func RegisterCustomer(c *gin.Context) {
 	// Implement customer registration logic here
 	// Use your crypto helper to hash the password
 	// Save customer data in the database
 	// Generate and return a JWT token upon successful registration
-	c.JSON(http.StatusOK, gin.H{"message": "Customer registered successfully"})
+	c.JSON(http.StatusOK, RegisterResponse{"Customer registered successfully"})
 }
 
 // @Summary Log in a customer
@@ -26,12 +35,13 @@ func RegisterCustomer(c *gin.Context) {
 // @Tags Authentication
 // @Accept json
 // @Produce json
-// @Success 200 {object} gin.H
+// @Success 200 {object} LoginResponse
 // @Router /auth/login [post]
 func LoginCustomer(c *gin.Context) {
 	// Implement customer login logic here
 	// Verify customer credentials, generate and return a JWT token upon successful login
-	c.JSON(http.StatusOK, gin.H{"message": "Customer logged in successfully"})
+	token := "your_generated_jwt_token"
+	c.JSON(http.StatusOK, LoginResponse{"Customer logged in successfully", token})
 }
 
 // @Summary Log out a customer
@@ -39,9 +49,9 @@ func LoginCustomer(c *gin.Context) {
 // @Tags Authentication
 // @Accept json
 // @Produce json
-// @Success 200 {object} gin.H
+// @Success 200 {object} RegisterResponse
 // @Router /auth/logout [post]
 func LogoutCustomer(c *gin.Context) {
 	// Implement customer logout logic here (optional)
-	c.JSON(http.StatusOK, gin.H{"message": "Customer logged out successfully"})
+	c.JSON(http.StatusOK, RegisterResponse{"Customer logged out successfully"})
 }
